objects/Build_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <description>The subject of the related case.</description>
        <formula>Case__r.Subject</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Build Summaries</relationshipLabel>
        <relationshipName>Build_Summaries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Request__c</fullName>
        <label>Deployment Request</label>
        <referenceTo>Deployment_Request__c</referenceTo>
        <relationshipLabel>Build Summaries</relationshipLabel>
        <relationshipName>Build_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Build Summary</label>
    <nameField>
        <displayFormat>BS-{00000000}</displayFormat>
        <label>Build Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>